<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewUserEmail"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/editTextName"
        android:hint="@string/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextphonenumber"
        android:hint="@string/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="15dp"
        android:id="@+id/buttonAdd"
        android:text="@string/saveInfo"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="15dp"
        android:id="@+id/buttonLogout"
        android:text="@string/TextLogout"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonDelete"
            android:text="@string/TextDelete"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>