<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_main_start_image" />

       <EditText
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Etext"

        />
    <EditText
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Epassword"

        />

    <Button
        android:layout_margin="15dp"
        android:id="@+id/buttonSignin"
        android:text="@string/Btext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:text="@string/TForgetPassword"
            android:id="@+id/textForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
        android:textAlignment="center"
        android:text="@string/Tview1"
        android:id="@+id/textViewSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>


</RelativeLayout>